@@ -1,3 +1,7 @@
+2012-08-17  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* SoundCloud: Rabi Alam contributed a SoundCloud provider, thanks!
+
 2012-08-16  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* account: Sam Solomon cleaned up the e-mail management view:
